--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,11 @@
         <javac srcdir="${src}" destdir="${build}" encoding="utf-8" debug="true">
             <exclude name="ch/unibe/eindermu/test/*"/>
         </javac>
+        <copy todir="${build}/ch/unibe/inkml">
+             <filelist dir="${src}/ch/unibe/inkml">
+                   <file name="inkml.xsd"/>
+             </filelist>
+        </copy>
     </target>
 
     <target name="jar" depends="compile,manifest">
