XmlHandler:     - Adding indentation to XML output     - small refactoring     - removing old, commented code
build.xml 
    - adding xml.xsd to resources to copy (this is a seriouse build bug)

--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,7 @@
         <copy todir="${build}/ch/unibe/inkml">
              <filelist dir="${src}/ch/unibe/inkml">
                    <file name="inkml.xsd"/>
+             	   <file name="xml.xsd"/>
              </filelist>
         </copy>
     </target>
